// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentLocation should render Current Location: YOUR_ADDRESS when geolocating prop is false 1`] = `
<div
  id="current-location-text"
>
  <h1>
    Current Location: 1234 Main St
  </h1>
   
</div>
`;

exports[`CurrentLocation should render Determining your current location... 1`] = `
<div
  id="current-location-text"
>
  <h1>
    <div>
      <span>
        Determining your current location... 
      </span>
      <Loader
        active={true}
        indeterminate={true}
        inline={true}
      />
    </div>
  </h1>
   
</div>
`;
